--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blazor.PwaTemplate.Client</title>
     <base href="https://picknick68.github.io/Pwa/" />
-    <!--<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />-->
-    <link rel="stylesheet" href="css/app.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="Blazor.PwaTemplate.Client.styles.css" rel="stylesheet" />
+    <!--<link rel="stylesheet" href="Pwa/css/bootstrap/bootstrap.min.css" />-->
+    <link rel="stylesheet" href="Pwa/css/app.css" />
+    <link rel="icon" type="image/png" href="Pwa/favicon.png" />
+    <link href="Pwa/Blazor.PwaTemplate.Client.styles.css" rel="stylesheet" />
     <link href="manifest.webmanifest" rel="manifest" />
-    <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="Pwa/icon-512.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="Pwa/icon-192.png" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="Pwa/_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -31,8 +31,8 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="Pwa/_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="Pwa/_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
 </body>
