--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_framework/blazor.webassembly.js" autostart="false"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
+    <script src="brotliloader.min.js" type="module"></script>
 </body>
 
 </html>
