--- a/404.html
+++ b/404.html
@@ -65,6 +65,8 @@
     </div>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_framework/blazor.webassembly.js" autostart="false"></script>
+    <script src="_content/BlazorPanzoom/panzoom.min.js"></script>
+    <script src="_content/BlazorPanzoom/blazorpanzoom.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
     <script src="brotliloader.min.js" type="module"></script>
