--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
     <script src="_framework/blazor.webassembly.js" autostart="false"></script>
     <script src="_content/BlazorPanzoom/panzoom.min.js"></script>
     <script src="_content/BlazorPanzoom/blazorpanzoom.js"></script>
+    <script src="_content/BlazorBarcodeScanner.ZXing.JS/zxingjs.index.min.js"></script>
+    <script src="_content/BlazorBarcodeScanner.ZXing.JS/BlazorBarcodeScanner.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
     <script src="brotliloader.min.js" type="module"></script>
