--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     <script src="_content/BlazorPanzoom/blazorpanzoom.js"></script>
     <script src="_content/BlazorBarcodeScanner.ZXing.JS/zxingjs.index.min.js"></script>
     <script src="_content/BlazorBarcodeScanner.ZXing.JS/BlazorBarcodeScanner.js"></script>
-    <!--<script src="sw-registrator.js"></script>-->
-    <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="sw-registrator.js"></script>
+    <!--<script>navigator.serviceWorker.register('service-worker.js');</script>-->
 
     <script src="brotliloader.min.js" type="module"></script>
 </body>
