--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">-->
     <title>Blazor.PwaTemplate.Client</title>
-    <base href="/" />
+    <base href="/Pwa/" />
     <!--<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />-->
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -65,7 +65,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_framework/blazor.webassembly.js" autostart="false"></script>
     <script src="_content/BlazorPanzoom/panzoom.min.js"></script>
     <script src="_content/BlazorPanzoom/blazorpanzoom.js"></script>
     <script src="_content/Blazor.Barcode.Scanner.Zxing/zxingjs.index.min.js"></script>
@@ -75,6 +75,7 @@
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
 
+    <script src="brotliloader.min.js" type="module"></script>
 </body>
 
 </html>
