--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <script src="_content/Blazor.Barcode.Scanner.Zxing/BlazorBarcodeScanner.js"></script>
     <script src="_content/BlazorIndexedDB/dexie.min.js"></script>
     <script src="_content/BlazorIndexedDB/blazorDB.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
 
